--- a/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
+++ b/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -57,7 +57,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
-                                        <rect key="frame" x="0.0" y="28.5" width="103" height="100"/>
+                                        <rect key="frame" x="18" y="28.5" width="85" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="EcJ-Rc-cop"/>
                                         </constraints>
@@ -72,8 +72,8 @@
                                     <constraint firstAttribute="trailing" secondItem="xel-8c-8el" secondAttribute="trailing" id="Qxv-v5-Hhr"/>
                                     <constraint firstItem="xel-8c-8el" firstAttribute="top" secondItem="l7S-H3-FVa" secondAttribute="bottom" id="cqL-0y-sEQ"/>
                                     <constraint firstItem="l7S-H3-FVa" firstAttribute="top" secondItem="XwX-19-Ef1" secondAttribute="top" constant="8" id="fup-EJ-3Rz"/>
+                                    <constraint firstItem="xel-8c-8el" firstAttribute="leading" secondItem="l7S-H3-FVa" secondAttribute="leading" constant="10" id="mKw-Co-Esb"/>
                                     <constraint firstItem="l7S-H3-FVa" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" constant="8" id="o2u-Dz-JsL"/>
-                                    <constraint firstItem="xel-8c-8el" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" id="xh0-JU-eeM"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bzu-U8-1IT">
@@ -137,6 +137,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="no_product_image" width="137" height="137"/>
+        <image name="no_product_image" width="112.5" height="112.5"/>
     </resources>
 </document>
