--- a/Teraoka/Views/Cell/OrderSummaryCell/OrderSummaryCell.xib
+++ b/Teraoka/Views/Cell/OrderSummaryCell/OrderSummaryCell.xib
@@ -34,13 +34,13 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jce-CI-V6l">
-                        <rect key="frame" x="162" y="12" width="42" height="20"/>
+                        <rect key="frame" x="162" y="12" width="43" height="20"/>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="17"/>
                         <color key="textColor" red="0.21960784310000001" green="0.74509803919999995" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="No options available." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ypd-kV-3S0">
-                        <rect key="frame" x="150" y="32" width="72" height="130.5"/>
+                        <rect key="frame" x="172" y="32" width="50" height="130.5"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="F99-fd-aAc"/>
                         </constraints>
@@ -120,7 +120,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item will be removed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJb-e0-w0n">
-                                <rect key="frame" x="96.5" y="108.5" width="157.5" height="20"/>
+                                <rect key="frame" x="100" y="108.5" width="150.5" height="20"/>
                                 <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
                                 <color key="textColor" red="0.88627450980392153" green="0.062745098039215685" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -141,12 +141,12 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ypd-kV-3S0" firstAttribute="leading" secondItem="g5z-Ri-cmZ" secondAttribute="trailing" id="0xr-Nw-S9Y"/>
                     <constraint firstItem="ypd-kV-3S0" firstAttribute="top" secondItem="jce-CI-V6l" secondAttribute="bottom" id="1ED-OW-kMn"/>
                     <constraint firstItem="jce-CI-V6l" firstAttribute="leading" secondItem="g5z-Ri-cmZ" secondAttribute="trailing" constant="12" id="9Vg-eL-Hf5"/>
                     <constraint firstItem="A9F-x9-bz2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ntp-rP-n14"/>
                     <constraint firstItem="g5z-Ri-cmZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Rk5-Ze-DRM"/>
                     <constraint firstAttribute="trailing" secondItem="A9F-x9-bz2" secondAttribute="trailing" id="WAs-Hq-LrL"/>
+                    <constraint firstItem="ypd-kV-3S0" firstAttribute="leading" secondItem="jce-CI-V6l" secondAttribute="leading" constant="10" id="b16-gs-pEd"/>
                     <constraint firstAttribute="bottom" secondItem="A9F-x9-bz2" secondAttribute="bottom" id="dlV-cM-Rhu"/>
                     <constraint firstItem="jce-CI-V6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="flE-6i-MTj"/>
                     <constraint firstItem="A9F-x9-bz2" firstAttribute="leading" secondItem="ypd-kV-3S0" secondAttribute="trailing" id="hWu-7b-Kpg"/>
